--- a/pom.xml
+++ b/pom.xml
@@ -35,18 +35,13 @@
             <version>1.18.24</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.13.3</version>
-        </dependency>
-<!--        pdf dependency-->
+        <!--        pdf dependency-->
         <dependency>
             <groupId>org.apache.pdfbox</groupId>
             <artifactId>pdfbox</artifactId>
             <version>2.0.24</version>
         </dependency>
-<!--        for soap dependency-->
+        <!--        for soap dependency-->
         <dependency>
             <groupId>com.sun.xml.ws</groupId>
             <artifactId>jaxws-ri</artifactId>
@@ -92,7 +87,7 @@
                 <version>2.3.2</version>
                 <configuration>
                     <wsdlUrls>
-                        <wsdlUrl>http://localhost:8081/wss/first?wsdl</wsdlUrl>
+                        <wsdlUrl>http://localhost:8081/wss/sender?wsdl</wsdlUrl>
                     </wsdlUrls>
                     <keep>true</keep>
                     <packageName>org.dobrodey.generate</packageName>
