--- a/pom.xml
+++ b/pom.xml
@@ -49,30 +49,6 @@
             <artifactId>jaxws-rt</artifactId>
             <version>2.3.5</version>
         </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>3.3.3</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-junit-jupiter</artifactId>
-            <version>3.3.3</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
     <build>
         <finalName>sender</finalName>
@@ -95,7 +71,8 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
-                    <url>http://localhost:8080/manager/text</url>
+<!--                    <url>http://localhost:8080/manager/text</url>-->
+                    <url>http://194.67.119.135:8080/manager/text</url>
                     <username>admin</username>
                     <password>aston</password>
                     <path>/sender</path>
@@ -107,7 +84,7 @@
                 <version>2.3.2</version>
                 <configuration>
                     <wsdlUrls>
-                        <wsdlUrl>http://localhost:8081/wss/sender?wsdl</wsdlUrl>
+                        <wsdlUrl>http://localhost:8082/ws/router?wsdl</wsdlUrl>
                     </wsdlUrls>
                     <keep>true</keep>
                     <packageName>org.dobrodey.generate</packageName>
