--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
             <artifactId>jaxws-rt</artifactId>
             <version>2.3.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>1.7.5</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>sender</finalName>
@@ -72,7 +77,7 @@
                 <version>2.2</version>
                 <configuration>
 <!--                    <url>http://localhost:8080/manager/text</url>-->
-                    <url>http://194.67.119.135:8080/manager/text</url>
+                    <url>http://tomcat.dobrodey.net:8080/manager/text</url>
                     <username>admin</username>
                     <password>aston</password>
                     <path>/sender</path>
